test/iam/policy-bindings/group-user.yaml
apiVersion: iam.miloapis.com/v1alpha1
kind: User
metadata:
  name: group-user-admin
spec:
  email: group-user-admin@datum.net
