test/iam/policy-bindings/group.yaml
apiVersion: iam.miloapis.com/v1alpha1
kind: Group
metadata:
  name: sample-admin-group
  namespace: ($namespace)
