test/iam/policy-bindings/machine-account.yaml
apiVersion: iam.miloapis.com/v1alpha1
kind: MachineAccount
metadata:
  name: sample-machine-account
  namespace: ($namespace)
spec:
  state: Active
