test/iam/policy-bindings/roles/compute-workload-admin.yaml
apiVersion: iam.miloapis.com/v1alpha1
kind: Role
metadata:
  name: compute.miloapis.com-workload-admin
spec:
  launchStage: Beta
  includedPermissions:
    - compute.miloapis.com/workloads.create
    - compute.miloapis.com/workloads.get
    - compute.miloapis.com/workloads.update
    - compute.miloapis.com/workloads.delete
    - compute.miloapis.com/workloads.list
    - compute.miloapis.com/workloads.watch
    - compute.miloapis.com/workloads.patch
